# medulla

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  DEVELOPING.md  Makefile  README.md  config.example.toml  install.sh
crates/medulla-client/: Cargo.toml
crates/medulla-client/src/: error.rs  sse.rs  tests.rs  types.rs
crates/medulla-tui/: Cargo.toml
crates/medulla-tui/src/: agents.rs  backend_runtime.rs  chat_store.rs  config.rs  core_runtime.rs  events.rs  lib.rs  main.rs  mock_runtime.rs  runtime.rs  tinyplace_service.rs  util.rs
crates/medulla-tui/src/daemon/: capabilities.rs  mod.rs  providers.rs
crates/medulla-tui/src/tinyplace_support/: config.rs  consumer.rs  control.rs  status.rs
crates/medulla-tui/tests/: e2e_backend.rs  e2e_core.rs  e2e_daemon.rs  feature_app.rs
crates/medulla-tui/tests/support/: fake_provider.rs  mock_backend.rs
src/sdk/: Cargo.toml
src/sdk/examples/: coordination_owner.rs  harness_contract_decode.rs
src/sdk/src/: auth.rs  clock.rs  config.rs  lib.rs  logging.rs  session_history.rs  worker_profile.rs
src/sdk/src/auth/: loopback.rs  mod.rs  store.rs  tests.rs  token.rs  types.rs  url.rs
src/sdk/src/autoreview/: mod.rs  tests.rs  types.rs
src/sdk/src/client/: error.rs  mod.rs  sse.rs  types.rs
src/sdk/src/client/feedback/: api.rs  mod.rs  tests.rs  types.rs
src/sdk/src/client/tests/: decode_tests.rs  integration_tests.rs  mod.rs  sse_tests.rs
src/sdk/src/config/: core_socket.rs  core_socket_tests.rs  load.rs  load_tests.rs  mod.rs  persist.rs  persist_tests.rs  tests.rs  types.rs  types_tests.rs  urls.rs  urls_tests.rs
src/sdk/src/contacts/: book.rs  desk.rs  mod.rs  service.rs  tests.rs  types.rs
src/sdk/src/contacts/tests/: health.rs  mod.rs  policy.rs  service.rs
src/sdk/src/daemon/: capabilities.rs  dir_context.rs  entry.rs  flags.rs  mappers.rs  mod.rs  providers.rs  runtime.rs  status.rs  task_loop.rs  tests.rs  transport.rs  types.rs
src/sdk/src/daemon/mappers/: claude.rs  codex.rs  events.rs  mapper.rs  mod.rs  opencode.rs  shared.rs  tests.rs  tests_ext.rs  timestamp.rs  types.rs  usage.rs
src/sdk/src/daemon/providers/: detect.rs  execute.rs  mod.rs  tests.rs  types.rs
src/sdk/src/daemon/task_loop/: control.rs  mod.rs  probe.rs  run.rs
src/sdk/src/daemon/tests/: capability_tests.rs  mod.rs  provider_tests.rs  task_tests.rs
src/sdk/src/harness_contract/: mod.rs  tests.rs  types.rs
src/sdk/src/history_upload/: mod.rs  redact.rs  scan.rs  share.rs  tests.rs  types.rs
src/sdk/src/hub/: activity.rs  boot.rs  handle.rs  mod.rs  relay.rs  roster.rs  runner.rs  socket.rs  tests.rs  types.rs
src/sdk/src/hub/runner/: mod.rs  pump.rs
src/sdk/src/hub/tests/: activity.rs  dispatch.rs  mod.rs  roster.rs
src/sdk/src/init/: MEDULLA.md.tmpl  draft.rs  mod.rs  template.rs  tests.rs  types.rs
src/sdk/src/lessons/: mod.rs  tests.rs  types.rs
src/sdk/src/memory/: env.rs  mod.rs  tests.rs
src/sdk/src/onboarding/: mod.rs  tests.rs  types.rs
src/sdk/src/runtime/: backend.rs  headless.rs  mod.rs  tests.rs
src/sdk/src/runtime/backend/: fold.rs  mod.rs  runtime.rs  stream.rs  (+2 more)
src/sdk/src/session_history/: list.rs  mod.rs  scan.rs  summary.rs  tests.rs  types.rs
src/sdk/src/sessions/: completion.rs  input.rs  mod.rs  ops.rs  registry.rs  routing.rs  turn_stream.rs  turn_stream_tests.rs  types.rs
src/sdk/src/ship/: client.rs  mod.rs  parse.rs  tests.rs  types.rs
src/sdk/src/tinyplace/: config.rs  consumer.rs  control.rs  env.rs  mod.rs  service.rs  status.rs
src/sdk/src/tinyplace_support/: control.rs  frames.rs  runtime.rs  service.rs
src/sdk/src/ui/: agents.rs  chat_store.rs  harness.rs  mod.rs  onboarding.rs  util.rs
src/sdk/src/update/: check.rs  install.rs  mod.rs  tests.rs  types.rs
src/sdk/src/workspace/: commit.rs  git.rs  mod.rs  tests.rs  types.rs
src/sdk/src/wrapper/: args.rs  bridge.rs  control.rs  envelope.rs  mod.rs  run.rs  tail.rs  tests.rs  types.rs
src/sdk/tests/: e2e_backend_runtime.rs  e2e_daemon.rs  e2e_daemon_providers.rs  e2e_daemon_serve.rs  e2e_daemon_transport.rs  e2e_feedback_runtime.rs  e2e_history_rewards.rs  e2e_memory_core.rs  e2e_tinyplace.rs  e2e_update.rs  e2e_wrapper.rs  feature_history_upload.rs  feature_init.rs  feature_memory.rs  feature_status.rs
src/sdk/tests/e2e_daemon/: helpers.rs  injected.rs  spawn_path.rs
src/sdk/tests/support/: fake_provider.rs  mock_backend.rs  mock_harness.rs  mock_harness_helpers.rs  mock_harness_relay.rs  mock_harness_script.rs  mock_harness_types.rs  mock_signal_server.rs  mock_signal_server_http.rs  mock_signal_server_routing.rs  mock_signal_server_state.rs  mock_tinyplace.rs
src/tui/: Cargo.toml
src/tui/src/: app_loop.rs  cli.rs  commands.rs  event_loop.rs  harness_pty.rs  hub_relay.rs  hub_relay_tests.rs  lib.rs  log.rs  main.rs  run.rs  terminal.rs  worker_loop.rs
src/tui/src/cli/: mod.rs  parse.rs  plan.rs  tests.rs  types.rs
src/tui/src/event_loop/: cmd_dispatch.rs  dispatch.rs  mod.rs  repo.rs  tests.rs  types.rs  update_checker.rs
src/tui/src/hub_relay/: tests.rs
src/tui/src/ui/: app.rs  clipboard.rs  composer.rs  login.rs  mod.rs  theme.rs
src/tui/src/worker/: executor.rs  executor_tests.rs  mod.rs  screen.rs  trust.rs  trust_tests.rs
src/tui/tests/: e2e_backend.rs  e2e_backend_ext.rs  e2e_cli.rs  e2e_core.rs  e2e_core_ext.rs  e2e_run.rs  e2e_signal.rs  feature_account.rs  feature_agent_lanes.rs  feature_app.rs  feature_app_more.rs  feature_config_editor.rs  feature_copy_and_prompts.rs  feature_decisions.rs  feature_feedback_tab.rs  feature_harness_pty.rs  feature_login.rs  feature_memory_tab.rs  feature_mouse_scroll.rs  feature_onboarding.rs  feature_settings.rs  feature_settings_focus.rs  feature_usage.rs  feature_welcome.rs  feature_welcome_driver.rs  feature_workers.rs
src/tui/tests/e2e_core_ext/: helpers.rs  lifecycle.rs  resilience.rs  transport.rs
src/tui/tests/e2e_signal/: fault_matrix.rs  fold.rs  helpers.rs  registration.rs  task_chain.rs  wrapper.rs
src/tui/tests/feature_app_more/: agents.rs  chat_overview.rs  commands.rs  helpers.rs  views.rs
(+320 files in other folders)
