[package]
name = "medulla"
description = "Medulla client SDK and terminal UI: chat with the orchestrator, watch agent lanes, run the coding-agent daemon"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/tinyhumansai/medulla"

[lib]
name = "medulla"
path = "src/lib.rs"

[[bin]]
name = "medulla"
path = "src/main.rs"

[dependencies]
tinyplace = { path = "vendor/tinyplace/sdk/rust" }
tinycortex = { path = "vendor/tinycortex", features = ["persona", "providers-http"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "process", "fs", "signal", "net"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
anyhow = "1"
tracing = "0.1"
base64 = "0.22"
async-trait = "0.1"
dirs = "6"

[dev-dependencies]
tempfile = "3"
