[workspace]
resolver = "2"
members = ["src/sdk", "src/tui"]
# Vendored path deps must not become workspace members: they carry their own
# lints/tests and would otherwise fall under the CI clippy/test gates.
exclude = ["vendor"]

[workspace.package]
version = "0.3.3"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/tinyhumansai/medulla"

[workspace.dependencies]
medulla = { path = "src/sdk" }
tinyplace = { path = "vendor/tinyplace/sdk/rust" }
tinycortex = { path = "vendor/tinycortex", features = ["persona", "providers-http"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "process", "fs", "signal", "net"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
anyhow = "1"
tracing = "0.1"
base64 = "0.22"
async-trait = "0.1"
dirs = "6"
regex = "1"
sha2 = "0.10"
tempfile = "3"
