[workspace]
resolver = "2"
members = ["src/sdk", "src/tui"]
# Vendored path deps must not become workspace members: they carry their own
# lints/tests and would otherwise fall under the CI clippy/test gates.
exclude = ["vendor"]

[workspace.package]
version = "0.4.1"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/tinyhumansai/medulla"

[workspace.dependencies]
medulla = { path = "src/sdk" }
tinyplace = { path = "vendor/tinyplace/sdk/rust" }
tinycortex = { path = "vendor/tinycortex", features = ["persona", "providers-http"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "process", "fs", "signal", "net"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
portable-pty = "0.9"
# Terminal emulator: parses a PTY's VT/ANSI stream into a screen grid so a live
# harness CLI can be rendered inside a ratatui pane.
vt100 = "0.15"
# Minted session ids: a harness told which id to use writes a transcript we can
# find by name, instead of one we have to guess by mtime.
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
tracing = "0.1"
base64 = "0.22"
async-trait = "0.1"
dirs = "6"
# Advisory file locks that work on both unix (flock) and Windows (LockFileEx)
# and are released by the OS when the holding process dies — what lets a
# crashed daemon's identity slot be reclaimed without a stale-pidfile dance.
fs2 = "0.4"
regex = "1"
sha2 = "0.10"
globset = "0.4"
tempfile = "3"
