[package]
name = "medulla-client"
description = "HTTP/SSE client for the Medulla orchestration backend API"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
futures.workspace = true
reqwest.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["net"] }
futures = { workspace = true }
