[package]
name = "medulla"
description = "Medulla client SDK: backend HTTP/SSE client, runtimes, persona memory, and the coding-agent daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "medulla"
path = "src/lib.rs"

[dependencies]
tinyplace = { workspace = true }
tinycortex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
async-trait = { workspace = true }
rust_socketio = { version = "0.6", features = ["async"] }
dirs = { workspace = true }
fs2 = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
globset = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
