[package]
name = "medulla-tui"
description = "Medulla terminal UI: chat with the orchestrator, watch agent lanes, drive the daemon and wrappers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "medulla_tui"
path = "src/lib.rs"

[[bin]]
name = "medulla"
path = "src/main.rs"

[dependencies]
medulla = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
portable-pty = { workspace = true }
vt100 = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
